--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ nav {
 	z-index: 998;
 	transition: all 0.3s ease;
 	font-family: "Ubuntu", sans-serif;
+	background: #060606;
 }
 nav.sticky {
 	background: #131927;
