--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ nav {
 	transition: all 0.3s ease;
 	font-family: "Ubuntu", sans-serif;
 	background: #060606;
-	margin-top: 0;
+	margin: 0;
+	padding: 0;
 }
 /* nav.sticky {
 	background: #131927;
