--- a/style.css
+++ b/style.css
@@ -32,9 +32,7 @@ nav {
 	z-index: 998;
 	transition: all 0.3s ease;
 	font-family: "Ubuntu", sans-serif;
-}
-nav.sticky {
-	background: #131927;
+	background: #00040c;
 	padding: 13px 0;
 }
 nav .navbar {
@@ -339,7 +337,7 @@ section .button button:hover {
 
 /* Footer CSS */
 footer {
-	background: #131927;
+	background: #00040c;
 	padding: 15px 0;
 	text-align: center;
 	font-family: "Poppins", sans-serif;
@@ -362,7 +360,7 @@ footer .text span a:hover {
 	bottom: 20px;
 	right: 20px;
 	color: #fff;
-	background: #131927;
+	background: #00040c;
 	padding: 7px 12px;
 	font-size: 18px;
 	border-radius: 6px;
@@ -419,7 +417,7 @@ footer .text span a:hover {
 		position: fixed;
 		left: -100%;
 		top: 0;
-		background: #0e2431;
+		background: #00040c;
 		height: 100vh;
 		max-width: 400px;
 		width: 100%;
@@ -438,7 +436,7 @@ footer .text span a:hover {
 		margin: 10px 0;
 	}
 	nav.sticky .menu a:hover {
-		color: #131927;
+		color: #00040c;
 	}
 	nav .navbar .media-icons {
 		display: none;
@@ -482,9 +480,5 @@ footer .text span a:hover {
 	}
 	.home .text-three {
 		font-size: 33px;
-	}
-	.skills-details .boxes .per {
-		font-size: 50px;
-		color: #131927;
 	}
 }
