--- a/style.css
+++ b/style.css
@@ -32,10 +32,10 @@ nav {
 	position: fixed;
 	width: 100%;
 	z-index: 998;
-	transition: all 0.3s ease;
 	font-family: "Ubuntu", sans-serif;
 	background: #00040c;
 	padding: 13px 0;
+	top: -20px;
 }
 nav .navbar {
 	width: 90%;
