--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 	box-sizing: border-box;
 	text-decoration: none;
 	scroll-behavior: smooth;
+	max-width: 100vw;
+	overflow-x: hidden;
 }
 
 /* Custom Scroll Bar CSS */
@@ -267,7 +269,82 @@ section .button button:hover {
 	list-style: none;
 }
 /* My Projects CSS */
-
+.projects_cont {
+	color: #0e2431;
+}
+.projects_cont .boxes {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+.projects_cont .boxes .box {
+	margin: 20px 0;
+	width: calc(100% / 3 - 20px);
+	text-align: center;
+	border-radius: 12px;
+	padding: 30px 10px;
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
+	cursor: default;
+	transition: all 0.4s ease;
+}
+.projects_cont .boxes .box .projImg img {
+	width: 100%;
+	height: 200px;
+	border-radius: 10px;
+	border: 1px solid #0e2431;
+}
+.projects_cont .boxes .box:hover {
+	background: #0e2431;
+	color: #fff;
+}
+.projects_cont .boxes .box .icon {
+	height: 50px;
+	width: 50px;
+	background: #0e2431;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 50px;
+	font-size: 18px;
+	color: #fff;
+	margin: 0 auto 10px auto;
+	transition: all 0.4s ease;
+}
+.boxes .box:hover .icon {
+	background-color: #fff;
+	color: #0e2431;
+}
+.projects_cont .boxes .box:hover .topic,
+.projects_cont .boxes .box:hover p {
+	color: #0e2431;
+	transition: all 0.4s ease;
+}
+.projects_cont .boxes .box:hover .topic,
+.projects_cont .boxes .box:hover p {
+	color: #fff;
+}
+.staks {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 24px;
+}
+.staks .ico {
+	margin: 10px;
+}
+.staks .ico p {
+	font-size: 14px;
+}
+.projects a {
+	color: #0e2431;
+	text-decoration: none;
+	font-size: 24px;
+}
+.projects a div {
+	font-size: 14px;
+}
+.box:hover a {
+	color: #fff;
+}
 /* Contact Me CSS */
 .contact {
 	background: #ccc;
@@ -453,7 +530,7 @@ footer .text span a:hover {
 		align-items: center;
 		width: 100%;
 	}
-	.services .boxes .box {
+	.projects_cont .boxes .box {
 		margin: 20px 0;
 		width: 100%;
 	}
