--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 	box-sizing: border-box;
 	text-decoration: none;
 	scroll-behavior: smooth;
+}
+body {
 	max-width: 100vw;
 	overflow-x: hidden;
 }
@@ -283,7 +285,7 @@ section .button button:hover {
 	text-align: center;
 	border-radius: 12px;
 	padding: 30px 10px;
-	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12);
+	box-shadow: 0 5px 10px 1px rgba(0, 0, 0, 0.12);
 	cursor: default;
 	transition: all 0.4s ease;
 }
@@ -547,9 +549,9 @@ footer .text span a:hover {
 		font-size: 33px;
 	}
 	.contact .text .form .form-top input {
-		width: 280px;
+		width: 270px;
 	}
 	.contact .text .form .form-bottom textarea {
-		width: 280px;
+		width: 270px;
 	}
 }
