--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ nav.sticky .menu-btn {
  I'm Selecting Directly 'Section Tag' and 'Class'  */
 section {
 	padding-top: 40px;
+	min-height: 95vh;
 }
 section .content {
 	width: 80%;
