--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ section .button button:hover {
 /* My Skills CSS */
 .skills {
 	background: #ccc;
-	padding: 40px;
+	padding: 80px;
 }
 .skills .content {
 	padding: 0;
@@ -348,10 +348,16 @@ section .button button:hover {
 .staks .ico p {
 	font-size: 14px;
 }
+.projects {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 .projects a {
 	color: #0e2431;
 	text-decoration: none;
 	font-size: 24px;
+	margin: 0 10px;
 }
 .projects a div {
 	font-size: 14px;
@@ -433,6 +439,9 @@ footer .text span a:hover {
 
 /* Responsive Media Query */
 @media (max-width: 1190px) {
+	section {
+		padding-top: 200px;
+	}
 	section .content {
 		width: 85%;
 	}
@@ -476,6 +485,9 @@ footer .text span a:hover {
 @media (max-width: 750px) {
 	nav .navbar {
 		width: 90%;
+	}
+	.skills {
+		padding: 60px;
 	}
 	.contact .text .form .form-top input {
 		width: 400px;
@@ -556,6 +568,15 @@ footer .text span a:hover {
 @media (max-width: 500px) {
 	.home .text-two {
 		font-size: 55px;
+	}
+	section {
+		padding-top: 40px;
+	}
+	.projects_cont .boxes .box:first-child {
+		margin-top: -10px;
+	}
+	.skills {
+		padding: 40px;
 	}
 	.home .text-three {
 		font-size: 33px;
