--- a/style.css
+++ b/style.css
@@ -445,7 +445,9 @@ footer .text span a {
 footer .text span a:hover {
 	text-decoration: underline;
 }
-
+.boxes .box:hover .projects a {
+	color: #89b4e6 !important;
+}
 /* Responsive Media Query */
 @media (max-width: 1190px) {
 	section .content {
