--- a/style.css
+++ b/style.css
@@ -302,8 +302,8 @@ section .button button:hover {
 	justify-content: space-between;
 }
 .projects_cont .boxes .box {
-	margin: 20px 0;
-	width: calc(100% / 3 - 20px);
+	margin: 40px 0px;
+	width: calc(100% / 2.5 - 20px);
 	text-align: center;
 	border-radius: 12px;
 	padding: 30px 10px;
@@ -313,7 +313,7 @@ section .button button:hover {
 }
 .projects_cont .boxes .box .projImg img {
 	width: 100%;
-	height: 200px;
+	height: 250px;
 	border-radius: 10px;
 	border: 1px solid #0e2431;
 }
@@ -463,6 +463,10 @@ footer .text span a:hover {
 	.contact .text .form .form-bottom textarea {
 		width: 600px;
 		margin: 10px;
+	}
+	.projects_cont .boxes .box {
+		margin: 20px 0px;
+		width: calc(100% / 2 - 20px);
 	}
 }
 @media (max-width: 1000px) {
